deployments/google-cloud/kubernetes/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hexa-demo
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
  labels:
    app: hexa-demo
    tier: frontend
spec:
  type: NodePort
  ports:
    - port: 8886
      targetPort: 8886
  selector:
    app: hexa-demo
    tier: frontend
